# FlexAudioBackend

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  justfile
examples/: CMakeLists.txt
examples/simple_client/: CMakeLists.txt  main.cpp
include/: audio_backend.h  jack_backend.h  pipewire_backend.h
src/: audio_backend.cpp  jack_backend.cpp  pipewire_backend.cpp
tests/: CMakeLists.txt
